--- a/assets/CSS/group.css
+++ b/assets/CSS/group.css
@@ -48,3 +48,5 @@
             height: 400px;
             padding: 10px;
         }
+		.group_img img{transform:scale(1,1);transition: all 1s ease-out;}
+		.group_img img:hover{transform:scale(1.2,1.2);}
